<resources>
    <string name="app_name">Record Shop</string>
    <string name="album_artwork">Album artwork</string>
    <string name="release_date">Release Date:</string>
    <string name="price">Price:</string>
    <string name="stock">Stock:</string>
    <string name="add_album">Add Album</string>
    <string name="header_image">Header album image</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="submit">Submit</string>
    <string name="back_to_main_activity">Back to Main Activity</string>
    <string name="release_date_hint">Release Date ("YYYY-MM-DD")</string>
    <string name="price_hint">Price</string>
    <string name="stock_hint">Stock</string>
    <string name="add_album_button">Add Album button</string>
    <string name="artwork_url_hint">Artwork URL (Optional)</string>
    <string name="edit_album">Edit Album</string>
    <string name="update_album">Update Album</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete_message">Are you sure you want to delete this album?</string>
    <string name="dialig_delete_album_title">Delete Album</string>
    <string name="title_search_view_query_hint">Search title...</string>
    <string name="artist_search_view_query_hint">Search artist...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
</resources>