<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="album"
            type="com.northcoders.recordshop.model.Album" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.viewalbum.ViewAlbumFragment">

    <LinearLayout
        android:id="@+id/text_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/album_artwork"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/album_artwork"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginVertical="16dp"
            android:padding="4dp"
            android:contentDescription="@string/album_artwork"
            android:src="@drawable/holder_album_artwork"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@{album.title}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="An Album Title" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:text="@{album.artist}"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Artist Name" />

        <TextView
            android:id="@+id/album_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@{album.genre}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Album Genre" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/release_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{album.releaseDate}"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="2020-20-20" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            >

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(album.price)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="£XX.XX" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/stock_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/stock"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(album.stock)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="XX" />
        </TableRow>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/back_to_main_activity"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_gravity="bottom"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/back_to_main_activity"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_gravity="bottom|end"/>

</FrameLayout>
</layout>