<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="album"
            type="com.northcoders.recordshop.model.Album" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:layout_margin="4dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <ImageView
                android:id="@+id/album_artwork"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/album_artwork"
                android:src="@drawable/holder_album_artwork"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/text_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_artwork"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{album.title}"
                    tools:text="An Album Title"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{album.artist}"
                    tools:text="Artist Name"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/album_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{album.genre}"
                    tools:text="Album Genre"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="12sp"/>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/release_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{album.releaseDate}"
                        tools:text="2020-20-20"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@{album.price}"
                        tools:text="£XX.XX"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="12sp"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/stock_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/stock"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/stock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@{album.stock}"
                        tools:text="XX"
                        android:textSize="12sp"/>
                </TableRow>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
